Collection API improvements [#107667]