@@ -2,7 +2,6 @@ package ru.job4j.array2list;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.core.Is.is;
@@ -17,9 +16,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = convertMatrix2List.toList(input);
         assertThat(result, is(expect));
     }
