@@ -2,7 +2,7 @@ package ru.job4j.list2array;
 
 import org.junit.Test;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -11,16 +11,16 @@ public class ConvertList2ArrayTest {
 
     @Test
     public void toArray() {
-        ConvertList2Array list = new ConvertList2Array();
-        int[][] result = list.toArray(
-                Arrays.asList(1, 2, 3, 4, 5, 6, 7),
+        ConvertList2Array converter = new ConvertList2Array();
+        int[][] result = converter.toArray(
+                List.of(1, 2, 3, 4, 5, 6, 7),
                 3
         );
-        int[][] expect = {
+        int[][] expected = {
                 {1, 2, 3},
                 {4, 5, 6},
                 {7, 0, 0}
         };
-        assertThat(result, is(expect));
+        assertThat(result, is(expected));
     }
 }
